--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,13 @@
+
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
 }
+
+apply plugin: 'com.android.application'
+
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdk 32
@@ -31,8 +37,14 @@ android {
     }
 }
 
+
+
 dependencies {
 
+    implementation platform('com.google.firebase:firebase-bom:30.2.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
