--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,16 @@
         <meta-data android:name="com.facebook.sdk.ClientToken" android:value="@string/facebook_client_token"/>
 
         <activity
+            android:name=".SettingsMenuActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".PrivacySettingsActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
             android:name=".RegistroActivity"
             android:exported="true">
 
@@ -30,6 +40,7 @@
         <activity
             android:name=".ChatActivity"
             android:exported="true">
+
 
         </activity>
         <activity
@@ -40,11 +51,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-
         </activity>
 
 
