--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-firestore-ktx'
 
+    implementation 'com.google.firebase:firebase-storage-ktx'
+
     // Declare the dependency for the Firebase Authentication library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth-ktx'
